Run code with security manager